--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://fav.farm/🔍" />
+    <link rel="icon" href="https://fav.farm/🕵️‍♂️" />
     <title>Preis-Detektiv</title>
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
