--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="https://fav.farm/🕵️‍♂️" />
     <title>Preis-Detektiv</title>
     <meta name="viewport" content="width=device-width" />
+    <meta name="verification" content="201f1a889f094a9e11f90bba44e0d58d" />
     %sveltekit.head%
   </head>
   <body>
