--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://fav.farm/🕵️‍♂️" />
-    <title>Preis-Detektiv</title>
+    <title>Finde deinen Expert - deinExpert</title>
     <meta name="viewport" content="width=device-width" />
-    <meta name="verification" content="201f1a889f094a9e11f90bba44e0d58d" />
+    <meta name="description" content="Finde deinen Expert für die besten Preise für deine Lieblingsprodukte. Technik, Büroartikel, Haushaltselektronik und alles was Expert zu bieten hat.">
     %sveltekit.head%
   </head>
   <body>
