styling and logout displaylogic

--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://fav.farm/🕵️‍♂️" />
     <title>Finde deinen Expert - deinExpert</title>
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Finde deinen Expert für die besten Preise für deine Lieblingsprodukte. Technik, Büroartikel, Haushaltselektronik und alles was Expert zu bieten hat.">
+    <meta
+      name="description"
+      content="Finde deinen Expert für die besten Preise für deine Lieblingsprodukte. Technik, Büroartikel, Haushaltselektronik und alles was Expert zu bieten hat."
+    />
     %sveltekit.head%
   </head>
-  <body>
-    <div>%sveltekit.body%</div>
+  <body class="h-screen">
+    <div class="h-full">%sveltekit.body%</div>
   </body>
 </html>
 
